--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^7.7.1",
     "react-scripts": "5.0.1",
     "react-transition-group": "^4.4.5",
+    "sweetalert2": "^11.22.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
